--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ logging.file.name=${logging.file.path}/log-67.log
 logging.pattern.file=%d{dd-MM-yyyy HH:mm:ss.SSS} [%thread] %-5level %logger{36}.%M - %msg%n
 
 spring.jpa.hibernate.ddl-auto=update
+
+jwt.expiration=10
+jwt.secret=ItsMySecretKey:D
